[gd_scene load_steps=10 format=3 uid="uid://b5qnn7aelbitc"]

[ext_resource type="Script" path="res://src/island.gd" id="1_j6xqy"]
[ext_resource type="Texture2D" uid="uid://clx76ip6pwboi" path="res://assets/island/tile_bg.png" id="3_sl4kl"]
[ext_resource type="Texture2D" uid="uid://cmhdrssev5ao5" path="res://icon.svg" id="4_fa1s2"]
[ext_resource type="Shader" path="res://shaders/outline.gdshader" id="5_mj7la"]
[ext_resource type="Texture2D" uid="uid://b73qfrqs4mvci" path="res://assets/player/diver.png" id="6_ihvcw"]
[ext_resource type="Texture2D" uid="uid://c804a632eh6sb" path="res://assets/totem/water.png" id="7_qq88u"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_u6wq0"]
shader = ExtResource("5_mj7la")
shader_parameter/width = 1
shader_parameter/outline_color = Color(1, 1, 1, 1)
shader_parameter/flickering_speed = 0.0
shader_parameter/minimal_flickering_alpha = 0.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6fhuq"]
shader = ExtResource("5_mj7la")
shader_parameter/width = 1
shader_parameter/outline_color = Color(1, 1, 1, 1)
shader_parameter/flickering_speed = null
shader_parameter/minimal_flickering_alpha = null

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tr4vc"]
size = Vector2(166, 166)

[node name="Island" type="Node2D"]
position = Vector2(200, 200)
script = ExtResource("1_j6xqy")

[node name="BackgroundImage" type="Sprite2D" parent="."]
scale = Vector2(2.6, 2.6)
texture = ExtResource("3_sl4kl")

[node name="IslandImage" type="Sprite2D" parent="."]
position = Vector2(0, -14)
texture = ExtResource("4_fa1s2")

[node name="PlayerIcon" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_u6wq0")
position = Vector2(-40, 25)
texture = ExtResource("6_ihvcw")

[node name="TotemIcon" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_6fhuq")
position = Vector2(43, 25)
texture = ExtResource("7_qq88u")

[node name="NameLabel" type="RichTextLabel" parent="."]
offset_left = -70.0
offset_top = 50.0
offset_right = 70.0
offset_bottom = 76.0
text = "Island Name "
fit_content = true
shortcut_keys_enabled = false

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_tr4vc")
